# Task2

./: .gitignore  Any_type.cpp  Any_type.h  CMakeLists.txt  Main.cpp  Test.cpp
